; ModuleID = '/home/carl/AnghaBench/freebsd/tools/test/testfloat/extr_testCases.c_float32RandomQInfP3.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/test/testfloat/extr_testCases.c_float32RandomQInfP3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@float32NumQInfWeightMasks = common dso_local global i64 0, align 8
@float32QInfWeightMasks = common dso_local global i32* null, align 8
@float32QInfWeightOffsets = common dso_local global i32* null, align 8
@float32P2 = common dso_local global i32* null, align 8
@float32NumP2 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @float32RandomQInfP3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @float32RandomQInfP3() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @randomUint8()
  %3 = load i64, i64* @float32NumQInfWeightMasks, align 8
  %4 = urem i64 %2, %3
  store i64 %4, i64* %1, align 8
  %5 = call i64 (...) @randomUint8()
  %6 = and i64 %5, 1
  %7 = trunc i64 %6 to i32
  %8 = shl i32 %7, 31
  %9 = call i32 (...) @randomUint16()
  %10 = and i32 %9, 511
  %11 = shl i32 %10, 23
  %12 = load i32*, i32** @float32QInfWeightMasks, align 8
  %13 = load i64, i64* %1, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %11, %15
  %17 = load i32*, i32** @float32QInfWeightOffsets, align 8
  %18 = load i64, i64* %1, align 8
  %19 = getelementptr inbounds i32, i32* %17, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = add nsw i32 %16, %20
  %22 = or i32 %8, %21
  %23 = load i32*, i32** @float32P2, align 8
  %24 = call i64 (...) @randomUint8()
  %25 = load i64, i64* @float32NumP2, align 8
  %26 = urem i64 %24, %25
  %27 = getelementptr inbounds i32, i32* %23, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = load i32*, i32** @float32P2, align 8
  %30 = call i64 (...) @randomUint8()
  %31 = load i64, i64* @float32NumP2, align 8
  %32 = urem i64 %30, %31
  %33 = getelementptr inbounds i32, i32* %29, i64 %32
  %34 = load i32, i32* %33, align 4
  %35 = add nsw i32 %28, %34
  %36 = and i32 %35, 8388607
  %37 = or i32 %22, %36
  ret i32 %37
}

declare dso_local i64 @randomUint8(...) #1

declare dso_local i32 @randomUint16(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
